# vst-plugin

./: CMakeLists.txt  README.md  annotated.html  annotated_dup.js  architecture_8md.html  build__guide_8md.html  classCustomParamListener-members.html  classCustomParamListener.html  classCustomParamListener.js  classCustomParamListener__coll__graph.map  classCustomParamListener__coll__graph.md5  classCustomParamListener__inherit__graph.map  classCustomParamListener__inherit__graph.md5  classCustomParamListener_a2f63139e15303c9d1b057e48c9dbb399_cgraph.map  classCustomParamListener_a2f63139e15303c9d1b057e48c9dbb399_cgraph.md5  classEQCurveView-members.html  classEQCurveView.html  classEQCurveView.js  classEQCurveView__coll__graph.map  classEQCurveView__inherit__graph.md5  classEQCurveView_a1d6f3f02d3ec78149e1228a53b2f373b_cgraph.map  classEQCurveView_a1d6f3f02d3ec78149e1228a53b2f373b_cgraph.md5  classEQCurveView_a1d6f3f02d3ec78149e1228a53b2f373b_icgraph.map  classEQCurveView_a1d6f3f02d3ec78149e1228a53b2f373b_icgraph.md5  classEQCurveView_a4bba398cd5bd372c0f52ac40f57e8fb2_cgraph.map  classEQCurveView_a4bba398cd5bd372c0f52ac40f57e8fb2_cgraph.md5  classEQCurveView_a4bba398cd5bd372c0f52ac40f57e8fb2_icgraph.map  classEQCurveView_a4bba398cd5bd372c0f52ac40f57e8fb2_icgraph.md5  classEQCurveView_a536b3d2f0a13cc013cbc01f5156a9822_icgraph.map  classEQCurveView_a536b3d2f0a13cc013cbc01f5156a9822_icgraph.md5  classEQCurveView_aac64098dd70589d822711216097e9cf5_cgraph.map  classEQCurveView_aac64098dd70589d822711216097e9cf5_cgraph.md5  classEQCurveView_ac5383c84d520955d603b5dd165fb42d5_icgraph.map  classEQCurveView_ac5383c84d520955d603b5dd165fb42d5_icgraph.md5  classEQCurveView_ac59e52ff3897ed439e7ed3f030aab7ee_icgraph.map  classEQCurveView_ac59e52ff3897ed439e7ed3f030aab7ee_icgraph.md5  classEQCurveView_ad64b165e0a459d18601495af9d099ed3_icgraph.map  classEQCurveView_ad64b165e0a459d18601495af9d099ed3_icgraph.md5  classEqualizer-members.html  classEqualizer.html  (+221 more)
.github/workflows/: doxygen.yml
docs/: TODO.md  architecture.md  build_guide.md  daw_compatibility.md  doxy_mainpage.md  index.md  resources.md  user_guide.md
docs/devjournal/: 2025-03-27.md  2025-04-05.md  2025-04-13.md  2025-04-25.md  2025-05-05.md  2025-05-11.md  2025-06-16.md  2025-07-07.md  2025-08-07.md  2025-08-27.md
docs/doxygen/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+50 more)
src/: CMakeLists.txt  controller.cpp  controller.hpp  eqconstants.hpp  eqcurveview.cpp  eqcurveview.hpp  eqshape.hpp  equalizer.cpp  equalizer.hpp  fftprocessor.cpp  fftprocessor.hpp  info.plist  main.cpp  paramlistener.cpp  pluginfactory.cpp  presetmenu.cpp  presetmenu.hpp  processor.cpp  processor.hpp  utils.hpp  viewGUI.uidesc
src/resources/: viewGUI.uidesc  win32resource.rc
